fix: 1.4.3 Contrast (Minimum) Level AA
The overview links are white on yellow when focused, which fails
minimum contrast.

--- a/app/assets/stylesheets/components/overview.scss
+++ b/app/assets/stylesheets/components/overview.scss
@@ -14,6 +14,10 @@
   color: $colour-white;
 }
 
+.summary-link-colour:focus {
+  color: $colour-black;
+}
+
 .overview-section-alignment {
   padding-left: 0;
   padding-right: 0;
